Zmiana ustawień ant-a: generowanie *.jar do katalogu bin/, dokumentacji do doc/javadoc.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,9 +22,9 @@ debug.classpath=\
 debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
-dist.dir=dist
+dist.dir=bin
 dist.jar=${dist.dir}/Biathlon.jar
-dist.javadoc.dir=${dist.dir}/javadoc
+dist.javadoc.dir=doc/javadoc
 endorsed.classpath=
 excludes=
 file.reference.desmoj-2.3.4-complete-bin.jar=lib/desmoj-2.3.4-complete-bin.jar
